--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>
+					<h3> JS for newbies </h3>
+					<p> A little presentation ;)</p>
+				</section>
+
+				<section>
+					Slide de Exemplo
+				</section>	
+				
+				<section>
+					Slide de Exemplo 2
+				</section>	
 			</div>
 		</div>
 		<script src="js/reveal.js"></script>
