add some slides and images

--- a/index.html
+++ b/index.html
@@ -1,28 +1,58 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/white.css">
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>
-					<h3> JS for newbies </h3>
-					<p> A little presentation ;)</p>
-				</section>
 
-				<section>
-					Slide de Exemplo
-				</section>	
+<head>
+	<meta charset="UTF-8">
+	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/theme/blood.css">
+</head>
+
+<body>
+	<div class="reveal">
+		<div class="slides">
+			<section>
+				<h3> JavaSript for Jedis </h3>
+				<img height="400px" src='./images/yoda.jpg' />			
+				<div style='margin-top: 100px; float: right'> GG</div>	
+			</section>
+			
+			<section>
+				<ul>
+					<li> Introdução </li>
+					<li> Características </li>
+					<li> Exemplo </li>
+				</ul>
+			</section>
+
+			<section>
+				<p> Não são apenas Scripts! </p>
+				<p> EcmaScript </p>
+				<p> Prototypes </p>
+				<p> Engine V8 ( Surgiu do gmail ) </p>
+				<p> Cliente e Servidor </p>
 				
-				<section>
-					Slide de Exemplo 2
-				</section>	
-			</div>
+			</section>
+
+			<section>
+				<p> JavaScript não é Java, mas ... </p>
+				<img height="300px" src='./images/java_script.png' />
+			</section>
+
+			<section>
+					<p> Web, Desktop, Mobile, Games (Unity, Phaser), Satélites ... </p>
+					<img src='./images/javascript_forAll.gif' />
+			</section>
+
+			<section>
+				<p> VanillaJS, JQuery, Angular, React </p>
+				<p> Dinâmico e Tipado</p>
+				<p> OO e Funcional</p>
+			</section>
 		</div>
-		<script src="js/reveal.js"></script>
-		<script>
-			Reveal.initialize();
-		</script>
-	</body>
+	</div>
+	<script src="js/reveal.js"></script>
+	<script>
+		Reveal.initialize();
+	</script>
+</body>
+
 </html>
