add v8 and jqueryreactangular slides

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 		<div class="slides">
 			<section>
 				<h3> JavaSript for Jedis </h3>
-				<img height="400px" src='./images/yoda.jpg' />			
-				<div style='margin-top: 100px; float: right'> GG</div>	
+				<img height="400px" src='./images/yoda.jpg' />
+				<div style='margin-top: 100px; float: right'> GG</div>
 			</section>
-			
+
 			<section>
 				<ul>
 					<li> Introdução </li>
@@ -29,7 +29,7 @@
 				<p> Prototypes </p>
 				<p> Engine V8 ( Surgiu do gmail ) </p>
 				<p> Cliente e Servidor </p>
-				
+
 			</section>
 
 			<section>
@@ -38,12 +38,22 @@
 			</section>
 
 			<section>
-					<p> Web, Desktop, Mobile, Games (Unity, Phaser), Satélites ... </p>
-					<img src='./images/javascript_forAll.gif' />
+				<p> Web, Desktop, Mobile, Games (Unity, Phaser), Satélites ... </p>
+				<img src='./images/javascript_forAll.gif' />
+			</section>
+
+			<section>
+				<p>V8 Google Chrome Engine</p>
+				<img src='./images/v8engine.jpg' />
 			</section>
 
 			<section>
 				<p> VanillaJS, JQuery, Angular, React </p>
+				<img src='./images/jqueryangularreact.jpg' />
+			</section>
+
+
+			<section>
 				<p> Dinâmico e Tipado</p>
 				<p> OO e Funcional</p>
 			</section>
